# duvida

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-test.yml
docs/source/: installation.md  usage.md
duvida/: __init__.py  config.py  hessians.py  hvp.py  information.py  utils.py
duvida/numpy/: numpy.py
